# myfeeds

./: .gitignore  config-example.yml  pyproject.toml
myfeeds/: __init__.py  config.py  log.py  main.py
myfeeds/templates/: bilibili_submissions.md  weibo_statuses.md  youku_videos.md
