[tool.poetry]
name = "myfeeds"
version = "0.1.0"
description = ""
authors = ["zmrenwu <zmrenwu@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.11.1"
pyyaml = "^5.3"
jinja2 = "^2.11.1"
beautifulsoup4 = "^4.8.2"
sentry-sdk = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
